--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
   <header>
     <nav class="navbar" id="navbarjs">
      
-      <img class="imgc justify-content-center" src="img/logowhitesqare.png">
+      <img class="imgc justify-content-center" src="img/logowhitesqare.png" id="optionalstuff">
+      <img class="imgb justify-content-center" src="img/logowhitesqare.png" id="optionalstuffshow">
 
       <ul class="nav-menu">
         <li class="nav-item">
