--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="row gx-5">
         <div class="col-lg-6">
           <div class="position-relative mb-5">
-            <img class="img-fluid rounded-3 mb-3" src="img/alarm.jpg" id="#snigelmorgon" alt="väckarklocka" />
+            <img class="img-fluid rounded-3 mb-3" src="img/snigelmorgonfirst.jpg" id="#snigelmorgon" alt="väckarklocka" />
             <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#snigelmorgon">Snigelmorgon</a>
           </div>
         </div>
@@ -142,7 +142,7 @@
     <div class="row gx-5">
       <div class="col-lg-6">
         <div class="position-relative mb-5">
-          <img class="img-fluid rounded-3 mb-3" src="img/alarm.jpg" alt="väckerklocka" />
+          <img class="img-fluid rounded-3 mb-3" src="img/snigelmorgonfirst.jpg" alt="väckerklocka" />
         </div>
       </div>
       <div class="col-lg-6">
