bilder till snigelmorgon

--- a/index.html
+++ b/index.html
@@ -158,7 +158,24 @@
       </div>
       <div class="col-lg-6">
         <div class="position-relative mb-5 mb-lg-0">
-          <img class="img-fluid rounded-3 mb-3" src="img/skissar.jpg" alt="en hand ritar" />
+          <img class="img-fluid rounded-3 mb-3" src="img/userstorymapping.jpg" alt="en hand ritar" />
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="position-relative">
+          <h2> Processen </h2>
+          <p> Text om projektet Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+              Aenean posuere risus sit amet efficitur maximus. Nam bibendum magna ex, euismod 
+              vehicula leo venenatis quis. Ut convallis ante nec diam sodales, sed lacinia tortor sodales. 
+              Pellentesque rhoncus sodales augue et ultricies. Nullam vitae congue libero, non sagittis ante. 
+              Pellentesque nisi est, dapibus mattis leo eu, porttitor sollicitudin diam. Duis sed tellus at sem 
+              pretium vestibulum vitae at lectus. Donec malesuada in turpis sed pharetra. Maecenas ante ante, ultricies 
+              ut dignissim vel, feugiat vitae turpis.</p>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="position-relative mb-5 mb-lg-0">
+          <img class="img-fluid rounded-3 mb-3" src="img/snigelwireframes.jpg" alt="en hand ritar" />
         </div>
       </div>
       <div class="col-lg-6">
