--- a/index.html
+++ b/index.html
@@ -149,9 +149,8 @@
         <div class="position-relative mb-5">
           <h2> Bakgrund</h2>
               <p> 
-                Som småbarnsförälder vet jag att en vardagsmorgon ofta kan bestå av en enda stor kamp. 
-                Jag är inte ensam många gånger har jag samtalat med frustrerade föräldrar efter en tuff morgon. Därför ville jag undersöka om det
-                 fanns ett sätt att göra dessa mornar roligare både för barnen och föräldrarna.
+                Som småbarnsförälder har jag många gånger samtalat med frustrerade föräldrar, efter en tuff vardagsmorgon med barnen. Därför ville jag undersöka om det
+                 fanns ett sätt att göra dessa mornar roligare både för barn och föräldrar.
 
               
                   <h5>Metoder</h5>
@@ -184,14 +183,21 @@
       </div>
       <div class="col-lg-6">
         <div class="position-relative">
-          <h2> Processen </h2>
-          <p> Text om projektet Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-              Aenean posuere risus sit amet efficitur maximus. Nam bibendum magna ex, euismod 
-              vehicula leo venenatis quis. Ut convallis ante nec diam sodales, sed lacinia tortor sodales. 
-              Pellentesque rhoncus sodales augue et ultricies. Nullam vitae congue libero, non sagittis ante. 
-              Pellentesque nisi est, dapibus mattis leo eu, porttitor sollicitudin diam. Duis sed tellus at sem 
-              pretium vestibulum vitae at lectus. Donec malesuada in turpis sed pharetra. Maecenas ante ante, ultricies 
-              ut dignissim vel, feugiat vitae turpis.</p>
+          <h2> Idén och vad ska byggas?</h2>
+          <p> Idén blev ett iPadspel för barnens morgonbestyr. Varje moment illustreerat i enklare bilder. 
+            Barnen ska hinna klart varje moment innan en snigel hinner ta sig över skärmen.
+            Hinner de får de en stjärna annars rinner slime ner över skärmen.
+            <br> 
+            <br> 
+            Med en user story mapping kunde jag snabbt lista alla krav och prioritera mellan funktionerna.
+        Det som skulle byggas först blev även projektets MVP. 
+        <br> 
+            <br>
+        
+             För att barnen skulle bli självgående ville jag att appen skulle prata. Under prototypandet insåg jag snabbt att den funktionen
+        skulle bli svår att få till. Istället fick illustrationerna bli extra tydliga. Jag testade illustrationen tillsammans med några barn. 
+        Såg de inte direkt vad de föreställde ändrade jag dem.
+        </p>
         </div>
       </div>
       <div class="col-lg-6">
@@ -201,14 +207,8 @@
       </div>
       <div class="col-lg-6">
         <div class="position-relative">
-          <h2> Test</h2>
-          <p> Text om projektet Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-              Aenean posuere risus sit amet efficitur maximus. Nam bibendum magna ex, euismod 
-              vehicula leo venenatis quis. Ut convallis ante nec diam sodales, sed lacinia tortor sodales. 
-              Pellentesque rhoncus sodales augue et ultricies. Nullam vitae congue libero, non sagittis ante. 
-              Pellentesque nisi est, dapibus mattis leo eu, porttitor sollicitudin diam. Duis sed tellus at sem 
-              pretium vestibulum vitae at lectus. Donec malesuada in turpis sed pharetra. Maecenas ante ante, ultricies 
-              ut dignissim vel, feugiat vitae turpis.</p>
+          <h2> Användningstest</h2>
+          <p> </p>
         </div>
       </div>
     </div>
