Tillagd text snigelmorgon loggor på bonava o di tillagda

--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
         </div>
         <div class="col-lg-6">
           <div class="position-relative mb-5 mb-lg-0">
-            <img class="img-fluid rounded-3 mb-3" src="img/celebrate.jpg" alt="ballonger" />
-            <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#fira">Något att fira</a>
+            <img class="img-fluid rounded-3 mb-3" src="img/dimain.jpg" alt="ballonger" />
+            <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#fira">Dagens Industri</a>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="position-relative">
-            <img class="img-fluid rounded-3 mb-3" src="img/happy.jpg" alt="en smilyballong" />
-            <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#happy">Glädjespridaren</a>
+            <img class="img-fluid rounded-3 mb-3" src="img/bonavamain.jpg" alt="en smilyballong" />
+            <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#happy">Bonava</a>
           </div>
         </div>
       </div>
@@ -208,7 +208,19 @@
       <div class="col-lg-6">
         <div class="position-relative">
           <h2> Användningstest</h2>
-          <p> </p>
+          <p>Efter första testet visade det sig snabbt att tiden för varje moment var aldeless för kort. Barnen hann inte med och kännde mer 
+            stress än nöje av att delta i spelet. 
+            <br> 
+            <br> 
+            Efter en iteration testade jag spelet igen. Nu hann barnen med sina moment men föräldrana hade ett behov av att kunna pausa spelet ifall något oväntat inträffade. 
+              Slutet på spelet upplevdes även otydligt av barnen som ville kunna gå tillbaka till startsida.   
+              <br> 
+              <br> 
+             Efter ytterligare en iteration rullade spelet på rätt friktionsfritt. Några barn blev dock ledsna och arga när de inte klarade ett moment och slajmet började rinna.
+            <br> 
+            <br> 
+            För att spelet ska kunna fungera skarpt behövs en del funktioner läggas till dels att föräldrarna kan välja moment och kläder som ska vara med. Talfunktionen känns fortfarande 
+              högst väsentlig i de utförda testerna tittar barnen mycket på skärmen för att hänga med i spelet. </p>
         </div>
       </div>
     </div>
@@ -357,13 +369,13 @@
 <section class="py-5 projectone" id="fira">
   <div class="container px-5 my-5">
     <div class="text-center mb-5">
-    <a href="#fira" class="fw-bolder"><h1>Något att fira</h1></a>
-      <p class="lead fw-normal text-muted mb-0">Ett spel för att få morgonen att flyta på smidigt</p>
+    <a href="#fira" class="fw-bolder"><h1>DI - Portföljen</h1></a>
+      <p class="lead fw-normal text-muted mb-0">MLP: Behålla Dagens Industris ca 1500 aktiva användare av portföljen</p>
     </div>
     <div class="row gx-5">
       <div class="col-lg-6">
         <div class="position-relative mb-5">
-          <img class="img-fluid rounded-3 mb-3" src="img/celebrate.jpg" alt="ballonger" />
+          <img class="img-fluid rounded-3 mb-3" src="img/dimain.jpg" alt="ballonger" />
         </div>
       </div>
       <div class="col-lg-6">
@@ -403,13 +415,13 @@
 <section class="py-5" id="happy">
   <div class="container px-5 my-5">
     <div class="text-center mb-5">
-    <a href="#climatechange" class="fw-bolder"><h1>Glädjespridaren</h1></a>
-      <p class="lead fw-normal text-muted mb-0">Ett spel för att få morgonen att flyta på smidigt</p>
+    <a href="#climatechange" class="fw-bolder"><h1>Bonava</h1></a>
+      <p class="lead fw-normal text-muted mb-0">Text kommer </p>
     </div>
     <div class="row gx-5">
       <div class="col-lg-6">
         <div class="position-relative mb-5">
-          <img class="img-fluid rounded-3 mb-3" src="img/happy.jpg" alt="en smilyballong" />
+          <img class="img-fluid rounded-3 mb-3" src="img/bonavamain.jpg" alt="en smilyballong" />
         </div>
       </div>
       <div class="col-lg-6">
