--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
       </div>
       <div class="col-lg-6">
         <div class="position-relative mb-5 mb-lg-0">
-          <img class="img-fluid rounded-3 mb-3" src="img/skissar.jpg" alt="en hand ritar" />
+          <img class="img-fluid rounded-3 mb-3" src="img/division.jpg" alt="en hand ritar" />
         </div>
       </div>
       <div class="col-lg-6">
