di texter tillagda

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       </div>
       <div class="col-lg-6">
         <div class="position-relative">
-          <h2> Användningstest</h2>
+          <h2> Hur användarna reagerade</h2>
           <p>Efter första testet visade det sig snabbt att tiden för varje moment var aldeless för kort. Barnen hann inte med och kännde mer 
             stress än nöje av att delta i spelet. 
             <br> 
@@ -381,12 +381,31 @@
       <div class="col-lg-6">
         <div class="position-relative mb-5">
           <h2> Bakgrund </h2>
-              <p> Aenean posuere risus sit amet efficitur maximus. Nam bibendum magna ex, euismod 
-                  vehicula leo venenatis quis. Ut convallis ante nec diam sodales, sed lacinia tortor sodales. 
-                  Pellentesque rhoncus sodales augue et ultricies. Nullam vitae congue libero, non sagittis ante. 
-                  Pellentesque nisi est, dapibus mattis leo eu, porttitor sollicitudin diam. Duis sed tellus at sem 
-                  pretium vestibulum vitae at lectus. Donec malesuada in turpis sed pharetra. Maecenas ante ante, ultricies 
-                  ut dignissim vel, feugiat vitae turpis</p>
+              <p> Under min praktik hos Bonnier News deltog jag i ett projekt hos Dagens industri. 
+                De var igång med att flytta över sin tjänst "Portföljen" till en ny plattform. En tjänst där du fiktivt kan köpa och sälja aktier och fonder.  
+                Deras första effektmål och MLP var att behålla deras nuvarande användare.
+
+                <h5>Medoder där jag var delaktig</h5>
+                  
+
+                <ul>
+                  <li>
+                    - Användartest
+                  </li>
+                    <li>
+                      - Tematisk analys
+                    </li>
+                    <li>
+                      - Designmob
+                      </li>
+                      <li>
+                        - Beteendetyper
+                      </li>
+                      <li>
+                        - Iterationer
+                      </li>
+                </ul>
+              </p>
         </div>
       </div>
       <div class="col-lg-6">
@@ -396,14 +415,32 @@
       </div>
       <div class="col-lg-6">
         <div class="position-relative">
-          <h2> Processen </h2>
-          <p> Text om projektet Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-              Aenean posuere risus sit amet efficitur maximus. Nam bibendum magna ex, euismod 
-              vehicula leo venenatis quis. Ut convallis ante nec diam sodales, sed lacinia tortor sodales. 
-              Pellentesque rhoncus sodales augue et ultricies. Nullam vitae congue libero, non sagittis ante. 
-              Pellentesque nisi est, dapibus mattis leo eu, porttitor sollicitudin diam. Duis sed tellus at sem 
-              pretium vestibulum vitae at lectus. Donec malesuada in turpis sed pharetra. Maecenas ante ante, ultricies 
-              ut dignissim vel, feugiat vitae turpis.</p>
+          <h2> Användarna </h2>
+          <p> När jag kom in i projektet hade en prototyp tagits fram. Användare hade  
+            rekryterats via en kvantitativ enkät där de även svarat på frågor om Portföljen.
+          Innan vi satte igång med användningtesterna genom förde vi ett pilottest som vi itererade på. 
+          Efter några skarpa anvädningstest itererade vi igen och genomförde sedan några fler tester.
+          Då prototypverktyget inte kunde ta emot inskriven text hade vi svårigheter med att få till en naturlig känsla.  
+        Vi kunde ändå se att användarna kunde ta sig genom flödet relativt friktionsfritt och vi gick vidare med en tematisk analys.  </p>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="position-relative mb-5 mb-lg-0">
+          <img class="img-fluid rounded-3 mb-3" src="img/diprototyp.jpg" alt="en hand ritar" />
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="position-relative">
+          <h2> Förfining av design och Beteendetyper </h2>
+          <p> När användningstesterna var slutförda återtod vissa frågetecken kring designen.
+            Vi hade även tagit in feedback från stakeholders.  
+            Tillsammans med en visuell designer och utvecklare 
+            genomförde vi flera designmobar och förfinade det sista.  
+            <br> 
+            <br> 
+          Dagens industri använders sig inte utav personas utan av beteende typer. 
+          En användare kan ha olika beteenden beroende på situationen som denne 
+          för tillfäligt befinner sig i. Genom vår tematiska analys kunde vi förstärka dessa. Vi tyckte även att vi kunde urskilja en ny.</p>
         </div>
       </div>
     </div>
