Förfining text snigelmorgon

--- a/index.html
+++ b/index.html
@@ -184,17 +184,20 @@
       <div class="col-lg-6">
         <div class="position-relative">
           <h2> Idén och vad ska byggas?</h2>
-          <p> Idén blev ett iPadspel för barnens morgonbestyr. Varje moment illustreerat i enklare bilder. 
-            Barnen ska hinna klart varje moment innan en snigel hinner ta sig över skärmen.
-            Hinner de får de en stjärna annars rinner slime ner över skärmen.
+          <p> Jag började med en <b>omvärldsanalys</b> där jag kikade på olika bildstöd för barn samt pedagogiska spel. 
             <br> 
             <br> 
-            Med en user story mapping kunde jag snabbt lista alla krav och prioritera mellan funktionerna.
-        Det som skulle byggas först blev även projektets MVP. 
+            Idén blev ett <b>iPadspel</b> för barnens morgonbestyr. Varje moment illustreerat i enklare bilder. 
+            I spelet ska barnen hinna klart varje moment innan en snigel hinner ta sig över skärmen.
+            Hinner de får de en stjärna annars börjar det rinna slime.
+            <br> 
+            <br> 
+            Med en  <b>user story mapping </b> kunde jag snabbt lista krav och prioritera mellan funktionerna.
+        Det som skulle byggas först blev även projektets <b>MVP</b>. 
         <br> 
             <br>
         
-             För att barnen skulle bli självgående ville jag att appen skulle prata. Under prototypandet insåg jag snabbt att den funktionen
+             För att få barnen självgående ville jag att spelet skulle prata. Under <b>prototypandet </b>insåg jag snabbt att den funktionen
         skulle bli svår att få till. Istället fick illustrationerna bli extra tydliga. Jag testade illustrationen tillsammans med några barn. 
         Såg de inte direkt vad de föreställde ändrade jag dem.
         </p>
@@ -208,19 +211,21 @@
       <div class="col-lg-6">
         <div class="position-relative">
           <h2> Hur användarna reagerade</h2>
-          <p>Efter första testet visade det sig snabbt att tiden för varje moment var aldeless för kort. Barnen hann inte med och kännde mer 
+          <p>Efter första <b>anvädningstestet</b> visade det sig snabbt att tiden för varje moment var aldeless för kort. Barnen hann inte med och kännde mer 
             stress än nöje av att delta i spelet. 
             <br> 
             <br> 
-            Efter en iteration testade jag spelet igen. Nu hann barnen med sina moment men föräldrana hade ett behov av att kunna pausa spelet ifall något oväntat inträffade. 
-              Slutet på spelet upplevdes även otydligt av barnen som ville kunna gå tillbaka till startsida.   
+            Efter en <b>iteration </b> körde jag ett nytt <b>anvädningstest</b>. Nu hann barnen med sina moment men föräldrana hade ett behov av att kunna pausa spelet ifall något oväntat inträffade. 
+              Slutet på spelet upplevdes även otydligt av barnen som ville kunna gå tillbaka till en startsida.   
               <br> 
               <br> 
-             Efter ytterligare en iteration rullade spelet på rätt friktionsfritt. Några barn blev dock ledsna och arga när de inte klarade ett moment och slajmet började rinna.
+             Efter ytterligare en <b>iteration</b> rullade spelet på rätt friktionsfritt. Några barn blev dock ledsna och arga när de inte klarade ett moment och slajmet började rinna.
             <br> 
             <br> 
-            För att spelet ska kunna fungera skarpt behövs en del funktioner läggas till dels att föräldrarna kan välja moment och kläder som ska vara med. Talfunktionen känns fortfarande 
-              högst väsentlig i de utförda testerna tittar barnen mycket på skärmen för att hänga med i spelet. </p>
+            <br> 
+            <h2> Fortsättning</h2>
+            För att spelet ska kunna fungera skarpt behövs en del funktioner läggas till som t.ex. att föräldrarna kan välja moment och kläder som ska vara med. Talfunktionen känns fortfarande 
+              högst väsentlig. I de utförda testerna tittar barnen mycket på skärmen för att hänga med i spelet. </p>
         </div>
       </div>
     </div>
